--- a/resources/[core]/inventory/html/css/main.css
+++ b/resources/[core]/inventory/html/css/main.css
@@ -1,54 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-.bg-button {
-    background: #646475 !important;
-}
-
-.text-check {
-    color: rgba(255, 255, 255, 0.8) !important;
-}
-
-.text-checkbox {
-    color: #0fffd5 !important;
-}
-
-.q-checkbox__svg {
-    color: #000 !important;
-}
-
-div#q-loading-bar {
-    display: none !important;
-}
-
-::-webkit-scrollbar {
-    display: none !important;
-}
-
-.q-card {
-    background: rgb(35, 34, 56) !important;
-}
-
-p {
-    margin: 0 !important;
-}
-
-.q-btn {
-    align-items: center !important;
-}
-
-.text-h6 {
-    color: #fff;
-}
-
-.q-card__section.q-card__section--vert.q-pt-none {
-    color: #fff;
-}
+.bg-button { background: #03000079!important; }
+.text-check { color: rgba(255, 255, 255, 0.8)!important; }
+.text-checkbox { color: #fafafa!important; }
+.q-checkbox__svg { color: #000!important; }
+div#q-loading-bar { display: none!important; }
+::-webkit-scrollbar { display: none!important; }
+.q-card { background: rgba(0, 0, 0, 0.582)!important; }
+p { margin: 0 !important; }
+.q-btn { align-items: center!important; }
+.text-h6 { color: #fff; }
+.q-card__section.q-card__section--vert.q-pt-none { color: #fff; }
 
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: 0px !important;
-    margin-left: 0px !important;
+    margin-right: 0px!important;
+    margin-left: 0px!important;
 }
 
 :root {
@@ -63,7 +31,7 @@ p {
 }
 
 .brand-logo {
-    position: relative;
+    position: relative; 
     left: 50%;
     transform: translateX(-50%);
     padding-top: 3px;
@@ -77,19 +45,19 @@ p {
     line-height: 48px;
     text-transform: normal;
     font-size: 1.5vh;
-    font-family: 'Roboto', sans-serif !important;
-}
+    font-family: Calibri !important;
+  }
 
 /* rgb() */
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 ::-webkit-scrollbar {
-    width: 4px;
+	width: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -97,28 +65,28 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #progressbar {
-    width: 134.6%;
+    width: 130.6%;
     margin-left: 0%;
     margin-top: 6.3%;
-    background-color: rgb(39 39 49);
+    background-color: rgba(0, 0, 0, 0.507);
 }
 
 #progressbar-other {
-    width: 134.8%;
+    width: 130.8%;
     margin-left: -1.5%;
     margin-top: 6.3%;
-    background-color: rgb(39 39 49);
+    background-color: rgba(0, 0, 0, 0.507);
 }
 
 .pro {
-    background: linear-gradient(to right, #0fffd5, #0b9a82 500px);
+    background: linear-gradient(to right, #fafafa, #fafafa 500px);
     height: 10px;
     max-width: 100%;
     transition: width 1s, background-color 1s;
 }
 
 .pro1 {
-    background: linear-gradient(to right, #0fffd5, #0b9a82 500px);
+    background: linear-gradient(to right, #fafafa, #fafafa 500px);
     height: 10px;
     max-width: 100%;
     transition: width 1s, background-color 1s;
@@ -133,16 +101,16 @@ input[type=number]::-webkit-outer-spin-button {
 
 .weight-img-other {
     margin-top: 0.6%;
-    width: 4%;
+    width:4%;
     right: -12%;
-    position: absolute;
+    position:absolute;
 }
 
 body {
     overflow-x: hidden;
 }
 
-#core-inventory {
+#qbcore-inventory {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -175,7 +143,7 @@ body {
     max-width: 41%;
     height: 75%;
     max-height: 81%;
-    background: rgb(35 34 56 / 80%);
+    background: rgba(0, 0, 0, 0);
 }
 
 .player-inventory {
@@ -202,7 +170,7 @@ body {
     max-width: 41%;
     height: 75%;
     max-height: 81%;
-    background: rgb(35 34 56 / 80%);
+    background: rgba(0, 0, 0, 0);
 }
 
 .other-inventory {
@@ -226,7 +194,7 @@ body {
     z-index: 105;
 }
 
-.player-inventory>.item-slot>.item-slot-key>p {
+.player-inventory > .item-slot > .item-slot-key > p {
     position: absolute;
     font-weight: 400;
     color: hsl(0deg 0% 0% / 15%);
@@ -236,7 +204,7 @@ body {
     text-align: left;
     font-size: 9vh;
     line-height: 1.8vh;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 .inv-options {
@@ -246,12 +214,11 @@ body {
     padding-bottom: 15px;
     height: auto;
     margin: 16% auto;
-    background: rgb(35 34 56 / 80%);
+    background: rgba(0, 0, 0, 0);
     right: 0px;
     width: 11%;
     left: 3vh;
-    cursor: pointer;
-    /* Can also be 'none' however, as these are the buttons I feel as the pointer fits better */
+    cursor: pointer; /* Can also be 'none' however, as these are the buttons I feel as the pointer fits better */
 }
 
 .combine-option-container {
@@ -268,14 +235,15 @@ body {
     width: 13.5vh;
     height: 13vh;
     float: left;
-    border: 1px solid rgba(255, 255, 255, 0.02);
-    background-color: rgb(102 102 113 / 30%) !important;
-    margin: 2px;
+    border: 1px solid rgba(255, 255, 255, 0.171);
+    background-color: rgba(0, 0, 0, 0.616) !important;
+    /*margin: 2px;*/
     transition: opacity 0.2s ease 0s;
 }
 
 .item-slot:hover {
-    background-color: rgb(48 48 56 / 30%) !important;
+    transition: ease 0.3s;
+    background-color: rgba(44, 44, 44, 0.493) !important;
 }
 
 .inv-option-item {
@@ -283,10 +251,10 @@ body {
 }
 
 .btn-inv {
-    width: 100% !important;
-    max-width: 100% !important;
-    padding: 10% !important;
-    background-color: rgba(235, 235, 235, 0);
+    width: 100%!important;
+    max-width: 100%!important;
+    padding: 10%!important;
+    background-color: rgba(0, 0, 0, 0.432);
 }
 
 #item-amount {
@@ -294,7 +262,7 @@ body {
     text-align: center;
     font-size: 1.5vh;
     font-weight: 300;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     outline: none;
 }
 
@@ -309,22 +277,20 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.01);
     top: 2vh;
 }
-
 .ammo-info-header {
     /* background-color: rgba(5, 5, 5, 0.5); */
     width: 100%;
     color: white;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     background-color: rgba(0, 0, 0, 0.192);
     font-size: 1.vh;
     padding: .4vh;
     text-align: center;
 }
-
 .ammo-info {
     position: relative;
     color: white;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     font-weight: 200;
     font-size: 1.vh;
     margin-left: .8vh;
@@ -332,20 +298,19 @@ body {
     margin-bottom: .25vh;
     top: .6vh;
 }
-
 .ammo-info span {
     margin-right: 1vh;
     float: right;
 }
 
-.inv-option-item>p {
+.inv-option-item > p {
     color: white;
     text-align: center;
     line-height: 48px;
     text-transform: normal;
     font-size: 1.5vh;
     font-weight: 300;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 .inv-option-item {
@@ -353,23 +318,23 @@ body {
     width: 100%;
     height: 50px;
     margin-left: 0%;
-    background-color: #646475 !important;
+    background-color: #00000083 !important;
     border: none;
     color: white;
     transition: background-color .1s linear;
-    border-radius: 0px !important;
+    border-radius: 20px!important;
 }
-
 .inv-option-hand {
     margin-top: 20%;
-    /*     width: 80%; */
+/*     width: 80%; */
     height: 100px;
     margin-left: 10%;
     transition: background-color .1s linear;
 }
 
 .inv-option-item:hover {
-    background-color: #5c5c6c;
+    background-color: #00000079;
+    border-radius: 3em;
 }
 
 .btn-combine {
@@ -378,7 +343,7 @@ body {
     width: auto;
     top: 0px;
     left: 0px;
-    background-color: #646475 !important;
+    background-color: #00000083 !important;
     text-align: center;
     line-height: 48px;
     font-size: 1.2vh;
@@ -392,12 +357,12 @@ body {
     transition: background-color 0.1s linear 0s;
 }
 
-.btn-combine>p {
+.btn-combine > p {
     color: white;
     text-align: center;
     font-size: 1.5vh;
     font-weight: 300;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     outline: none;
 
 }
@@ -408,7 +373,7 @@ body {
     left: 0.55vw;
 }
 
-.item-slot-amount>p {
+.item-slot-amount > p {
     color: #ffffff;
     text-align: right;
     font-size: 1.25vh;
@@ -416,7 +381,7 @@ body {
     cursor: none;
 }
 
-.item-slot-amount>p:after {
+.item-slot-amount > p:after {
     content: "x"
 }
 
@@ -426,7 +391,7 @@ body {
     right: 0.55vw;
 }
 
-.item-slot-name>p {
+.item-slot-name > p {
     color: #ffffff;
     text-align: right;
     font-size: 1.25vh;
@@ -441,7 +406,7 @@ body {
     background-color: transparent;
 }
 
-.item-slot-label>p {
+.item-slot-label > p {
     font-weight: 400;
     padding: 2.5px;
     padding-left: 5px;
@@ -449,7 +414,7 @@ body {
     font-size: 1.3vh;
     text-align: left;
     letter-spacing: 0px;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     white-space: pre;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -468,7 +433,7 @@ body {
     position: absolute;
     width: 0%;
     height: 150%;
-    background-color: #0fffd5;
+    background-color: #fafafa;
     z-index: 1;
 }
 
@@ -505,11 +470,11 @@ body {
 }
 
 .item-slot-img2 img {
-    display: block;
+    display:block;
 }
 
 .ui-draggable-dragging {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.562);
 }
 
 .player-inv-info {
@@ -525,7 +490,7 @@ body {
     position: relative;
     color: white;
     font-size: 20px;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     font-weight: 600;
     letter-spacing: 0.01vh;
     left: 0px;
@@ -540,7 +505,7 @@ body {
     color: rgb(255, 255, 255);
     font-size: 16px;
     font-weight: 900;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     letter-spacing: 0.1vh;
     bottom: 40px;
     right: -35%;
@@ -551,7 +516,7 @@ body {
     position: relative;
     color: white;
     font-size: 20px;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     font-weight: 600;
     letter-spacing: 0.01vh;
     left: -9px;
@@ -567,7 +532,7 @@ body {
     color: rgb(255, 255, 255);
     font-size: 16px;
     font-weight: 900;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     letter-spacing: 0.1vh;
     bottom: 40px;
     right: -33.5%;
@@ -581,10 +546,10 @@ body {
     top: 10%;
 }
 
-.player-inv-weight>p {
+.player-inv-weight > p {
     color: white;
     font-size: 12px;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 .other-inv-info {
@@ -596,10 +561,10 @@ body {
 }
 
 .ply-iteminfo-container {
-    background: rgba(35, 34, 56, 0.90);
+    background: rgba(0, 0, 0, 0.692);
     border-radius: 3px;
     color: rgba(220, 220, 220, 1);
-    border: 1px solid rgba(255, 255, 255, 0.02);
+    border: 1px solid rgb(255, 255, 255, 0.01);
     font-size: 1.35vh;
     font-weight: 0;
     left: 41%;
@@ -624,16 +589,16 @@ body {
     letter-spacing: 0.3px;
     line-height: 1;
     color: white;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     padding-top: 5px;
     padding-left: 5px;
 }
 
 .item-info-line {
     position: absolute;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     width: 85%;
-    background-color: #6d6d6d96;
+    background-color: #00000085;
     height: 0.13vh;
 }
 
@@ -643,7 +608,7 @@ body {
     font-weight: 400;
     line-height: 1.1;
     letter-spacing: 0.3px;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     color: white;
     padding-left: 5px;
     padding-top: .5vh;
@@ -672,7 +637,7 @@ body {
     margin-right: 1vh;
     width: 10vh;
     height: 11vh;
-    background: rgba(35, 34, 56, 0.95);
+    background: rgba(0, 0, 0, 0.562);
 }
 
 #itembox-action {
@@ -684,10 +649,10 @@ body {
     left: 0;
 }
 
-#itembox-action>p {
+#itembox-action > p {
     font-size: 14px;
     font-weight: 400;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     white-space: pre;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -697,7 +662,7 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: #0fffd5;
+    background-color: #fafafa;
     height: 0.3vh;
 }
 
@@ -707,7 +672,7 @@ body {
     padding: 0.10vw;
 }
 
-#itembox-label>p {
+#itembox-label > p {
     padding-left: 15px;
     padding-right: 15px;
     color: #ffffff;
@@ -737,7 +702,7 @@ body {
     height: 11vh;
     float: left;
     margin-left: 20px;
-    background: rgba(35, 34, 56, 0.95);
+    background: rgba(0, 0, 0, 0.486);
 }
 
 #requiredItem-action {
@@ -747,18 +712,18 @@ body {
     color: white;
     padding: 3px;
     font-size: 14px;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 #requiredItem-label {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: #0fffd5;
+    background-color: #fafafa;
     height: 0.3vh;
 }
 
-#requiredItem-label>p {
+#requiredItem-label > p {
     color: #ffffff;
     font-size: 14px;
     text-align: center;
@@ -793,7 +758,7 @@ body {
     z-index: 105;
 }
 
-.z-hotbar-inventory>.z-hotbar-item-slot>.z-hotbar-item-slot-key>p {
+.z-hotbar-inventory > .z-hotbar-item-slot > .z-hotbar-item-slot-key > p {
     position: absolute;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.15);
@@ -817,7 +782,7 @@ body {
     margin: 3px;
     transition: opacity 0.2s;
     opacity: 1.0;
-    background: rgba(35, 34, 56, 0.95);
+    background: rgba(0, 0, 0, 0.473);
     z-index: 9999;
 }
 
@@ -827,13 +792,13 @@ body {
     left: 0.55vw;
 }
 
-.z-hotbar-item-slot-amount>p {
+.z-hotbar-item-slot-amount > p {
     color: #ffffff;
     text-align: left;
     font-size: 14px;
 }
 
-.z-hotbar-item-slot-amount>p:after {
+.z-hotbar-item-slot-amount > p:after {
     content: "x";
 }
 
@@ -843,7 +808,7 @@ body {
     right: 0.55vw;
 }
 
-.z-hotbar-item-slot-amount-name>p {
+.z-hotbar-item-slot-amount-name > p {
     color: #ffffff;
     text-align: right;
     font-size: 14px;
@@ -858,12 +823,12 @@ body {
     height: fit-content;
 }
 
-.z-hotbar-item-slot-label>p {
+.z-hotbar-item-slot-label > p {
     color: rgb(247, 247, 247);
     font-size: 11.5px;
     text-align: center;
     text-transform: lowercase;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     font-variant: small-caps;
 }
 
@@ -904,7 +869,7 @@ body {
     color: rgba(216, 216, 216, 0.897);
 }
 
-.ammo-container-header>i {
+.ammo-container-header > i {
     line-height: 5vh;
     font-size: 1.8vh;
 }
@@ -919,7 +884,7 @@ body {
     margin-top: .5vh;
 }
 
-.ammo-box>img {
+.ammo-box > img {
     position: absolute;
     top: .15vh;
     left: .2vh;
@@ -927,14 +892,14 @@ body {
     opacity: .25;
 }
 
-.ammo-box>span {
+.ammo-box > span {
     position: absolute;
     color: rgba(255, 255, 255, 0.95);
     font-size: .93vh;
     bottom: 0;
     right: 0;
     margin: .3vh;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 .ammo-box-amount {
@@ -945,19 +910,19 @@ body {
     max-height: 100%;
 }
 
-#pistol_ammo>.ammo-box-amount {
+#pistol_ammo > .ammo-box-amount {
     height: 0%;
 }
 
-#smg_ammo>.ammo-box-amount {
+#smg_ammo > .ammo-box-amount {
     height: 0%;
 }
 
-#shotgun_ammo>.ammo-box-amount {
+#shotgun_ammo > .ammo-box-amount {
     height: 0%;
 }
 
-#rifle_ammo>.ammo-box-amount {
+#rifle_ammo > .ammo-box-amount {
     height: 0%;
 }
 
@@ -976,7 +941,7 @@ body {
     margin: 5vh;
     font-size: 3vh;
     color: rgb(255, 255, 255);
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 .weapon-attachments-container-description {
@@ -985,7 +950,7 @@ body {
     top: 5vh;
     font-size: 1.7vh;
     color: rgba(255, 255, 255, 0.8);
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 .weapon-attachments-container-details {
@@ -994,7 +959,7 @@ body {
     top: 9vh;
     font-size: 1.4vh;
     color: rgba(255, 255, 255, 0.8);
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
 }
 
 .weapon-attachments-container-detail-durability {
@@ -1007,7 +972,7 @@ body {
 .weapon-attachments-container-detail-durability-total {
     height: 100%;
     width: 50%;
-    background-color: #0fffd5;
+    background-color: #fafafa;
 }
 
 .weapon-attachments-container-image {
@@ -1034,7 +999,7 @@ body {
     left: 0;
     margin: 5vh;
     color: rgba(255, 255, 255, 0.8);
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     font-size: 1.4vh
 }
 
@@ -1063,13 +1028,13 @@ body {
     padding: 2.1%;
 }
 
-.weapon-attachment-label>p {
+.weapon-attachment-label > p {
     color: #ffffff;
     font-size: 1.1vh;
     text-align: center;
     text-transform: uppercase;
     line-height: 1.9vh;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     font-weight: 100;
 }
 
@@ -1079,8 +1044,8 @@ body {
     padding: 0.5vw;
 }
 
-.weapon-attachment-img>img {
-    display: block;
+.weapon-attachment-img > img {
+    display:block;
     position: relative;
     margin: 0 auto;
     margin-top: 10%;
@@ -1110,12 +1075,12 @@ body {
     background-color: rgb(18, 18, 18);
 }
 
-.weapon-attachments-remove>i {
+.weapon-attachments-remove > i {
     line-height: 6.5vh;
 }
 
 .weapon-attachments-remove-hover {
-    background-color: #0fffd5;
+    background-color: #fafafa;
 }
 
 .weapon-dragging-class {
@@ -1124,49 +1089,17 @@ body {
 }
 
 @keyframes ShakeEffect {
-    0% {
-        transform: translate(1px, 1px) rotate(0deg);
-    }
-
-    10% {
-        transform: translate(-1px, -2px) rotate(-1deg);
-    }
-
-    20% {
-        transform: translate(-3px, 0px) rotate(1deg);
-    }
-
-    30% {
-        transform: translate(3px, 2px) rotate(0deg);
-    }
-
-    40% {
-        transform: translate(1px, -1px) rotate(1deg);
-    }
-
-    50% {
-        transform: translate(-1px, 2px) rotate(-1deg);
-    }
-
-    60% {
-        transform: translate(-3px, 1px) rotate(0deg);
-    }
-
-    70% {
-        transform: translate(3px, 1px) rotate(-1deg);
-    }
-
-    80% {
-        transform: translate(-1px, -1px) rotate(1deg);
-    }
-
-    90% {
-        transform: translate(1px, 2px) rotate(0deg);
-    }
-
-    100% {
-        transform: translate(1px, -2px) rotate(-1deg);
-    }
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
 .weapon-attachments-back {
@@ -1181,7 +1114,7 @@ body {
     text-align: center;
     line-height: 6vh;
     color: white;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: Calibri !important;
     transition: .05s linear;
 }
 
