--- a/resources/[core]/inventory/html/css/main.css
+++ b/resources/[core]/inventory/html/css/main.css
@@ -110,7 +110,7 @@ body {
     overflow-x: hidden;
 }
 
-#qbcore-inventory {
+#inventory {
     position: absolute;
     width: 100%;
     height: 100%;
